# mail_service

./: .claspignore  .gitignore  Code.gs  README.md  appsscript.json
python/: .env.example  README.md  bot.py  pyproject.toml  requirements.txt
python/deploy/: mail-service.service
python/mail_service/: __init__.py  __main__.py  analysis.py  bot.py  calendar_client.py  config.py  gmail.py  google_auth.py  llm.py  models.py  service.py  telegram_ui.py
