[project]
name = "mail-service"
version = "1.0.0"
description = "Gmail → Telegram: важные письма с кнопками действий (long-polling)"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]==21.9",
    "google-api-python-client==2.151.0",
    "google-auth==2.36.0",
    "google-auth-oauthlib==1.2.1",
    "httpx==0.27.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mail_service"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
